--- a/views/shared/_navigation.pug
+++ b/views/shared/_navigation.pug
@@ -11,5 +11,7 @@ mixin navigation
             li
                 a(href="/") Portfolio
             li
+                a(href="/") Blog
+            li
                 a(href="/") Contact
             +search
