--- a/views/shared/_search.pug
+++ b/views/shared/_search.pug
@@ -1,3 +1,3 @@
 mixin search
-    form(id="search-form")
-        input
+    form(id="search-form" action="/search" method="get")
+        input(type="search" placeholder="Search")
