--- a/views/shared/_master.pug
+++ b/views/shared/_master.pug
@@ -14,4 +14,5 @@ html(lang="bg")
         block body
         script(src="/libs/particles.js/particles.js")
         script(src="/static/javascript/particles.loader.js")
+        script(src="/static/javascript/slider.js")
     
