Routing and Views Update

--- a/views/home.pug
+++ b/views/home.pug
@@ -5,6 +5,6 @@ include shared/_thumbnail-container
 
 block body
     main(id="particles-js")
-        +navigation
+        +navigation('home')
         +slider(images)
         +thumbnail-container
