--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,22 +27,26 @@ main {
     left: 64px;
     width: 18vw;
     height: 80vh;
-    padding: 20px 0;
     background-color: rgba(90, 90, 90, 0.6);
     border: 1px solid var(--element-border-grey);
     border-radius: var(--element-border-radius);
     box-shadow: 2px 2px 4px;
+    overflow-y: scroll;
+}
+#navigation::-webkit-scrollbar {
+    width: 4px;
+    background-color: rgba(60, 60, 60, 0.6);
 }
 #navigation h1 {
     font-size: var(--element-size-large);
     font-style: var(--element-style-italic);
     color: var(--element-color-white);
-    padding: 0 0 20px 20px;
+    padding: 20px 0 20px 20px;
 }
 #navigation li {
     border-bottom: 1px solid var(--element-border-grey);
 }
-#navigation li:first-child a {
+#navigation li .current-page {
     border-left: 2px solid var(--element-color-green);
 }
 #navigation li:last-child {
