--- a/views/shared/_master.pug
+++ b/views/shared/_master.pug
@@ -8,7 +8,10 @@ html(lang="bg")
         link(rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css")
         link(rel="stylesheet" href="/static/css/reset.css")
         link(rel="stylesheet" href="/static/css/style.css")
+        link(rel="stylesheet" href="/libs/jscrollpane/style/jquery.jscrollpane.css" media="all")
         script(src="/libs/jquery/dist/jquery.min.js")
+        script(src="/libs/jscrollpane/script/jquery.jscrollpane.min.js")
+        script(src="/static/javascript/jscrollpane.loader.js")
         title Victor Vladev's Photography
     body
         block body
