--- a/views/contact.pug
+++ b/views/contact.pug
@@ -4,3 +4,5 @@ include shared/_navigation
 block body
     main(id="particles-js")
         +navigation('contact')
+        div(id="content-container")
+            h2 Contact Me
