--- a/views/home.pug
+++ b/views/home.pug
@@ -7,4 +7,4 @@ block body
     main(id="particles-js")
         +navigation('home')
         +slider(images)
-        +thumbnail-container
+        +thumbnail-container(images)
