--- a/views/shared/_thumbnail-container.pug
+++ b/views/shared/_thumbnail-container.pug
@@ -1,2 +1,4 @@
-mixin thumbnail-container
+mixin thumbnail-container(images)
     div(id="thumbnail-container")
+        each image in images
+            div(class="thumbnail" style="background-image: url(../.." + image.url + ")")
