--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,7 @@ main {
     left: 64px;
     width: 18vw;
     height: 80vh;
+    padding-bottom: 20px;
     background-color: rgba(90, 90, 90, 0.6);
     border: 1px solid var(--element-border-grey);
     border-radius: var(--element-border-radius);
@@ -100,18 +101,32 @@ main {
     border: 1px solid var(--element-border-grey);
     box-shadow: 2px -2px 4px;
 }
-.thumbnail {
+.thumbnail-unit {
     display: inline-block;
     height: var(--element-size-full);
     width: 10%;
     margin: 0 15px;
     background-size: cover;
+    border: 2px solid var(--element-color-white);
+    border-radius: var(--element-border-radius);
     opacity: 0.4;
-    transition: opacity 1.2s ease-in-out;
+    transition: all 0.8s ease-in-out;
 }
-.thumbnail:hover {
+.thumbnail-unit:hover {
+    transform: scale(1.04);
+    border-color: var(--element-color-green);
     opacity: 1;
     cursor: pointer;
+}
+.fa-thumb {
+    display: none;
+}
+.thumbnail-unit:hover .fa-thumb {
+    display: inline-block;
+    position: var(--element-position-absolute);
+    top: calc(50% - 14px);
+    left: calc(50% - 14px);
+    color: var(--element-color-white);
 }
 
 /* SLIDER: */
