--- a/views/shared/_master.pug
+++ b/views/shared/_master.pug
@@ -18,4 +18,5 @@ html(lang="bg")
         script(src="/libs/particles.js/particles.js")
         script(src="/static/javascript/particles.loader.js")
         script(src="/static/javascript/slider.js")
+        script(src="/static/javascript/img-loader.js")
     
