About and Contact Page Update

--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -10,7 +10,7 @@ html {
     font-size: 10px;
 }
 body {
-    font-family: 'Open Sans', Arial, Helvetica, Lucida, sans-serif;
+    font-family: Trebuchet, 'Open Sans', Arial, Helvetica, Lucida, sans-serif;
 }
 li {
     list-style-type: none;
