--- a/views/contact.pug
+++ b/views/contact.pug
@@ -6,3 +6,8 @@ block body
         +navigation('contact')
         div(id="content-container")
             h2 Contact Me
+            form(id="contact-form" action="/contact" method="post")
+                div(class="input-group")
+                    input(class="form-control" type="text" placeholder="Name")
+                    input(class="form-control" type="email" placeholder="Email Address")
+                    textarea(class="form-control" type="text" placeholder="Message")
