--- a/views/shared/_master.pug
+++ b/views/shared/_master.pug
@@ -19,5 +19,5 @@ html(lang="bg")
         script(src="/static/javascript/particles.loader.js")
         script(src="/static/javascript/slider.js")
         script(src="/static/javascript/img-loader.js")
-        // script(src="/static/javascript/progress-bar.js")
+        script(src="/static/javascript/progress-bar.js")
     
