--- a/views/contact.pug
+++ b/views/contact.pug
@@ -8,6 +8,7 @@ block body
             h2 Contact Me
             form(id="contact-form" action="/contact" method="post")
                 div(class="input-group")
-                    input(class="form-control" type="text" placeholder="Name")
-                    input(class="form-control" type="email" placeholder="Email Address")
-                    textarea(class="form-control" type="text" placeholder="Message")
+                    input(class="form-control" type="text" placeholder="Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" required)
+                    input(class="form-control" type="email" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address'" required)
+                    textarea(class="form-control" type="text" placeholder="Message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Message'" required)
+                    button(class="btn btn-default") Submit Your Message
