--- a/views/shared/_slider.pug
+++ b/views/shared/_slider.pug
@@ -1,6 +1,6 @@
 mixin slider(images)
     div(id="slider")
         each image in images
-            div(class="slider-content slider-img" style="background-image: url(../.." + image.url + ")")
-        // div(class="progress-bar-container")
-        // div(class="progress-bar")
+            div(class="slider-content slider-img" style="background-image: url(" + image.url + ")")
+        div(class="progress-bar-container")
+        div(class="progress-bar")
