--- a/views/shared/_thumbnail-container.pug
+++ b/views/shared/_thumbnail-container.pug
@@ -4,7 +4,7 @@ mixin thumbnail-container(images)
             div(class="arrow-container")
                 i(class="fa fa-chevron-left fa-5x fa-arrow-custom" aria-hidden="true")
             each image in images
-                div(class="thumbnail-unit" style="background-image: url(../.." + image.url + ")")
+                div(class="thumbnail-unit" style="background-image: url(" + image.url + ")")
                     i(class="fa fa-search fa-3x fa-thumb-custom" aria-hidden="true")
             div(class="arrow-container")
                 i(class="fa fa-chevron-right fa-5x fa-arrow-custom" aria-hidden="true")
