Progress Bar Removed

--- a/views/shared/_master.pug
+++ b/views/shared/_master.pug
@@ -8,10 +8,10 @@ html(lang="bg")
         link(rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css")
         link(rel="stylesheet" href="/static/css/reset.css")
         link(rel="stylesheet" href="/static/css/style.css")
-        link(rel="stylesheet" href="/libs/jscrollpane/style/jquery.jscrollpane.css" media="all")
+        // link(rel="stylesheet" href="/libs/jscrollpane/style/jquery.jscrollpane.css" media="all")
         script(src="/libs/jquery/dist/jquery.min.js")
-        script(src="/libs/jscrollpane/script/jquery.jscrollpane.min.js")
-        script(src="/static/javascript/jscrollpane.loader.js")
+        // script(src="/libs/jscrollpane/script/jquery.jscrollpane.min.js")
+        // script(src="/static/javascript/jscrollpane.loader.js")
         title Victor Vladev's Photography
     body
         block body
@@ -19,5 +19,4 @@ html(lang="bg")
         script(src="/static/javascript/particles.loader.js")
         script(src="/static/javascript/slider.js")
         script(src="/static/javascript/img-loader.js")
-        script(src="/static/javascript/progress-bar.js")
     
