--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,11 @@
 main {
     --element-position-absolute: absolute;
     --element-position-relative: relative;
+
     --element-display-block: block;
+
+    --element-scroll-hidden: hidden;
+
     --element-size-extralarge: 3.6rem;
     --element-size-large: 2rem;
     --element-size-mid: 1.6rem;
@@ -13,17 +17,25 @@ main {
     --element-size-extrasmall: 1.2rem;
     --element-size-hover: 1.64rem;
     --element-size-full: 100%;
+
     --element-border-radius: 4px;
+
+    --element-height-80: 80vh;
+
+    --element-position-36: 36px;
+
     --element-color-white: #ffffff;
     --element-color-greytext: #7c8487;
     --element-color-grey: #898989;
     --element-color-black: #000000;
     --element-color-green: #01bab0;
+
     --element-style-italic: italic;
+
     --element-border-grey: rgba(255, 255, 255, 0.1);
 }
 #particles-js {
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--element-color-black);
 }
 
@@ -31,15 +43,16 @@ main {
 
 #navigation {
     position: var(--element-position-absolute);
-    top: 36px;
+    top: var(--element-position-36);
     left: 64px;
     width: 18vw;
-    height: 80vh;
+    height: var(--element-height-80);
     padding-bottom: 20px;
     background-color: rgba(90, 90, 90, 0.6);
     border: 1px solid var(--element-border-grey);
     border-radius: var(--element-border-radius);
     box-shadow: 2px 2px 4px;
+    overflow-x: var(--element-scroll-hidden);
     overflow-y: scroll;
 }
 
@@ -109,13 +122,14 @@ main {
 
 #thumbnail-container {
     position: var(--element-position-absolute);
-    bottom: 36px;
+    bottom: var(--element-position-36);
     height: 16vh;
     width: var(--element-size-full);
     padding: 10px 20px;
     background-color: rgba(180, 180, 180, 0.4);
     border: 1px solid var(--element-border-grey);
     box-shadow: 2px -2px 4px;
+    z-index: 2;
 }
 .arrow-container {
     display: inline-block;
@@ -172,9 +186,9 @@ main {
 
 #slider {
     position: var(--element-position-absolute);
-    top: 36px;
+    top: var(--element-position-36);
     left: calc(64px + 20vw);
-    height: 80vh;
+    height: var(--element-height-80);
     width: calc(100vw - (64px + 24vw));
     border: 1px solid var(--element-border-grey);
     border-radius: var(--element-border-radius);
@@ -185,7 +199,7 @@ main {
     width: var(--element-size-full);
     background-size: cover;
     border-radius: var(--element-border-radius);
-    filter: grayscale(40%);
+    filter: grayscale(64%);
     transition: filter 1.2s ease-in-out;
     cursor: pointer;
 }
@@ -198,16 +212,18 @@ main {
 }
 .slider-img:first-child {
     opacity: 1;
+    z-index: 1;
 }
 
-/* ABOUT, CONTACT AND BLOG CONTAINER */
+/* ABOUT, CONTACT, BLOG CONTAINER AND ARTICLE */
 
 #content-container, #blog-container {
     position: var(--element-position-absolute);
-    top: 36px;
+    top: var(--element-position-36);
     left: calc(64px + 20vw);
-    height: 80vh;
+    height: var(--element-height-80);
     width: calc(100vw - (64px + 24vw));
+    overflow-x: var(--element-scroll-hidden);
     overflow-y: scroll;
 }
 #content-container {
@@ -255,7 +271,7 @@ main {
 #content-container p, #blog-container .article-text {
     margin: 24px 54px;
     line-height: var(--element-size-large);
-    font-size: var(--element-size-small);
+    font-size: var(--element-size-extrasmall);
     letter-spacing: 1px;
     color: var(--element-color-greytext);
 }
